--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <version>8.0.30</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.6.0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
